Changing datasource to dynamoDB